--- a/src/components/FullpageVerticalSlider.css
+++ b/src/components/FullpageVerticalSlider.css
@@ -66,7 +66,7 @@ button.serch-btn-home {
   width: 16%;
   color: var(--white, #fff);
   text-align: center;
-  font-family: "Nexa-Bold", sans-serif;
+  font-family: "Nexa-Medium";
   font-size: 14.229px;
   font-style: normal;
   font-weight: 700;
@@ -105,5 +105,68 @@ img.city-map-icon {
   top: 10px;
   width: 24px !important;
 }
-.slide-content h2 {
+
+.full-page-vertical-slider-container {
+  height: auto; /* Set the container height to auto */
+  overflow: auto; /* Enable vertical scrolling for the page content */
+}
+
+.full-page-vertical-slider {
+  height: 100vh; /* Set the carousel height to full viewport height */
+  width: 100%; /* Set the carousel width to 100% */
+}
+
+@media (max-width: 768px) {
+  .search-box select {
+    padding: 11px 10px 10px 10px !important;
+    font-size: 16px;
+    border: none;
+    border-radius: 0px;
+    margin: 0px 0px;
+  }
+  button.serch-btn-home {
+    background-color: #cd842f;
+    height: 44px;
+    border: none;
+    width: auto !important;
+    color: var(--white, #fff);
+    text-align: center;
+
+    font-size: 14.229px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding: 0px 22px !important;
+    text-transform: capitalize;
+  }
+
+  img.city-map-icon {
+    display: none;
+  }
+
+  .search-box input {
+    flex-grow: 1;
+    max-width: 461px;
+    height: 44px;
+    margin-left: 0px !important;
+  }
+
+  .full-page-vertical-slider {
+    height: 80vh; /* Reset the carousel height to auto on mobile devices */
+    width: 100vw; /* Set the carousel width to 100vw (100% of viewport width) on mobile devices */
+    z-index: 77;
+  }
+  body {
+    overflow-y: scroll !important;
+  }
+  .slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+  }
 }
